# video-editor-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/clipping/: __init__.py  __main__.py  server.py
src/clipping/editor/: package-lock.json  package.json  tsconfig.json
src/clipping/editor/src/: Root.tsx  types.ts
src/clipping/editor/src/components/: ClipSequence.tsx  TransitionResolver.ts
src/clipping/editor/src/components/overlays/: CaptionOverlay.tsx  ImageOverlay.tsx  TextOverlay.tsx  animations.ts
src/clipping/editor/src/compositions/: Project.tsx
src/clipping/editor/src/lib/: media-src.ts  positions.ts  timeline.ts
src/clipping/tools/: analysis_tools.py  audio_tools.py  elevenlabs_tools.py  ffmpeg_tools.py  podcast_tools.py  project_tools.py
src/clipping/utils/: ffmpeg.py  media.py
