[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipping-mcp"
version = "0.1.0"
description = "MCP server for video/audio editing with FFmpeg and ElevenLabs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "elevenlabs>=1.0.0",
]

[project.scripts]
clipping = "clipping.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clipping"]
